--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form action="login" id="login-form">
             <h2 class="login-h2">Log In</h2>
             <label for="username">Username</label>
-            <input type="text" name="username" id="user-name" autocomplete="username" value="Jewels">
+            <input type="text" name="username" id="user-name" autocomplete="username" value="Julia">
             <span id="username-error-space"></span>
 
             <label for="password">Password</label>
