--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <form action="login" id="login-form">
             <h2 class="login-h2">Log In</h2>
             <label for="username">Username</label>
-            <input type="text" name="username" id="user-name" autocomplete="username" value="Julia">
+            <input type="text" name="username" id="user-name" autocomplete="username" value="">
             <span id="username-error-space"></span>
 
             <label for="password">Password</label>
-            <input type="password" name="password" id="user-password" autocomplete="current-password" value="009">
+            <input type="password" name="password" id="user-password" autocomplete="current-password" value="">
             <span id="password-error-space"></span>
 
             <button type="button" id="submit-btn" onclick="fetchInput()">Log In</button>
